[tool.poetry]
name = "adept-augmentations"
version = "0.1"
description = "A Python library aimed at adeptly, augmenting NLP training data."
authors = ["david <david.m.berenstein@gmail.com>"]
license = "Apache"
readme = "README.md"
homepage = "https://github.com/davidberenstein1957/adept-augmentations"
repository = "https://github.com/davidberenstein1957/adept-augmentations"
documentation = "https://github.com/davidberenstein1957/adept-augmentations"
keywords = ["spacy", "explainable AI", "xai", "nlu", "visualization", "datasets", "nlproc", "data-centricity", "augmentation", "data-augmentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
spacy = "^3"
datasets = "^2.5"
pydantic = "^1.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
pre-commit = "^2.20.0"
jupyterlab = "^3.6.1"
black = "^23.3.0"
ruff = "0.0.262"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning:tensorboard.*:"
]
addopts = "--cov=adept_augmentations --durations=10"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if _TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.black]
line-length = 119
experimental-string-processing = true

[tool.isort]
profile = "black"
src_paths = ["adept_augmentations"]
